Сделан футер. Работа с шаблоном закончена.

--- a/index.html
+++ b/index.html
@@ -170,6 +170,23 @@
 			</main>
 		</div>
 	</div>
-	<footer></footer>
+	<footer>
+			<div id="newsletter">
+				<div class="container">
+					<p>Subscribe to our newsletter<br><span>The user-friendliest WordPress theme ever made</span> </p>
+					<div id="email">
+						<form action="" method="GET">
+						  <input type="email" placeholder="email" name="email">
+						  <button type="submit"><img src="images/email-icon.png" alt=""></button>
+						</form>
+					</div>
+				</div>
+			</div>
+			<div id="copyright">
+				<div class="container">
+			    <p>&copy; Copyright Nedashkovska 2020.</p> 
+				</div>
+		</div>
+	</footer>
 </body>
 </html>
